--- a/css/main.css
+++ b/css/main.css
@@ -1,65 +1,120 @@
 * {
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
 }
 
 body {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 header,
 main,
 footer {
   --w: 800px;
   width: var(--w);
-  margin: 0 calc((100% - var(--w)) / 2);
+  margin: 40px calc((100% - var(--w)) / 2) 0;
+  display: inline-block;
 }
 
 header {
-  background-color: yellow;
 }
 
 header > img {
+  float: left;
+  height: 40px;
 }
 
 html > body > header > nav {
+  float: right;
 }
 nav > a {
+  float: left;
+  font-size: 20px;
+  line-height: 20px;
+  color: #333;
+  text-decoration: none;
+  padding: 10px 0px;
+  margin-left: 30px;
+  cursor: pointer;
+}
+nav > a:first-child {
+  margin-left: 0;
 }
 nav > a:hover {
+  text-decoration: underline;
+  color: #000;
 }
 main {
-  background-color: green;
 }
 main > div {
+  float: left;
+  width: 40%;
+  margin-top: 25px;
 }
 
 div > p:nth-child(1) {
+  font-size: 60px;
+  margin: 0;
+  font-weight: lighter;
 }
 div > p:nth-of-type(2) {
-}
-
-div > p:nth-of-type(2):after {
+  font-size: 50px;
+  margin: 0;
+  font-weight: bold;
 }
 
 div > p:nth-of-type(3) {
+  color: 555;
+}
+main > div > div:nth-of-type(1) {
+  width: 100px;
+  height: 3px;
+  background-color: #649;
 }
 main > div > div:nth-of-type(2) {
+  display: inline-block;
 }
 main > div > div > a {
 }
 div > div:nth-of-type(2) > a:first-child {
+  float: left;
+  font-size: 18px;
+  padding: 10px 25px;
+  line-height: 20px;
+  border-radius: 30px;
+  border: 3px solid #649;
+  background-color: #649;
+  color: white;
+  text-decoration: none;
+  user-select: none;
 }
 div > div:nth-of-type(2) > a:last-child {
+  float: left;
+  font-size: 18px;
+  padding: 10px 25px;
+  margin-left: 20px;
+  line-height: 20px;
+  border-radius: 30px;
+  border: 3px solid #649;
+  color: #333;
+  text-decoration: none;
+  user-select: none;
 }
-.div > a:hover {
+div > div:nth-of-type(2) > a {
+  box-shadow: 0px 4px 8px #0004;
+}
+
+div > div:nth-of-type(2) > a:hover {
+  box-shadow: 0px 6px 12px #0007;
 }
 main > img {
+  float: right;
+  width: 60%;
 }
 
 footer {
-  background-color: red;
+  margin-bottom: 40px;
 }
 footer > div {
+  float: left;
 }
 
 footer > div > a {
@@ -67,4 +122,6 @@ footer > div > a {
 footer > div > a:hover {
 }
 footer > p {
+  float: right;
+  margin: 0;
 }
