--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,9 @@
+@font-face {
+  font-family: Roboto;
+  src: url(../fonts/Roboto/static/Roboto-Bold.ttf);
+  font-weight: bold;
+  font-style: normal;
+}
 * {
   box-sizing: border-box;
 }
@@ -5,24 +11,19 @@
 body {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
-header,
-main,
-footer {
+.container {
   --w: 800px;
   width: var(--w);
   margin: 40px calc((100% - var(--w)) / 2) 0;
   display: inline-block;
 }
 
-header {
-}
-
-header > img {
+.logo {
   float: left;
   height: 40px;
 }
 
-html > body > header > nav {
+.main-nav {
   float: right;
 }
 nav > a {
@@ -42,15 +43,14 @@ nav > a:hover {
   text-decoration: underline;
   color: #000;
 }
-main {
-}
-main > div {
+
+.left-column {
   float: left;
   width: 40%;
   margin-top: 25px;
 }
 
-div > p:nth-child(1) {
+.main-title {
   font-size: 60px;
   margin: 0;
   font-weight: lighter;
@@ -58,7 +58,7 @@ div > p:nth-child(1) {
 div > p:nth-of-type(2) {
   font-size: 50px;
   margin: 0;
-  font-weight: bold;
+  font-family: Roboto;
 }
 
 div > p:nth-of-type(3) {
@@ -69,12 +69,12 @@ main > div > div:nth-of-type(1) {
   height: 3px;
   background-color: #649;
 }
-main > div > div:nth-of-type(2) {
+.btn-group {
   display: inline-block;
 }
 main > div > div > a {
 }
-div > div:nth-of-type(2) > a:first-child {
+.btn {
   float: left;
   font-size: 18px;
   padding: 10px 25px;
@@ -86,23 +86,16 @@ div > div:nth-of-type(2) > a:first-child {
   text-decoration: none;
   user-select: none;
 }
-div > div:nth-of-type(2) > a:last-child {
-  float: left;
-  font-size: 18px;
-  padding: 10px 25px;
+.btn.btn-white {
   margin-left: 20px;
-  line-height: 20px;
-  border-radius: 30px;
-  border: 3px solid #649;
+  background-color: #fff;
   color: #333;
-  text-decoration: none;
-  user-select: none;
 }
 div > div:nth-of-type(2) > a {
   box-shadow: 0px 4px 8px #0004;
 }
 
-div > div:nth-of-type(2) > a:hover {
+.btn:hover {
   box-shadow: 0px 6px 12px #0007;
 }
 main > img {
@@ -117,11 +110,7 @@ footer > div {
   float: left;
 }
 
-footer > div > a {
-}
-footer > div > a:hover {
-}
-footer > p {
+.copyright {
   float: right;
   margin: 0;
 }
